@@ -6,3 +6,5 @@ reconfigure after minor changes.
 2011-03-18: new @DBAPI_DRIVER@ variable for the sake of --without-dbapi builds.
 
 2011-05-17: new @ncbi_java@ variable for --with-jni builds.
+
+2011-10-05: new @FEATURES@ variable for the unit test framework.
